# naze

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.ts  style.scss
src-tauri/: Cargo.toml  log.txt  tauri.conf.json5
src-tauri/src/: main.rs
