[package]
name = "apps-launcher"
version = "0.1.0"
description = "지랄 염병하고들 자빠졌네 ..."
authors = ["you"]
license = "AUW"
repository = ""
default-run = "apps-launcher"
edition = "2021"
#rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = ["config-json5"] }

[dependencies]
winres = "0.1.12"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "config-json5", "system-tray"] }
#window-shadows = { path = "../../../" }
window-vibrancy = "0.1.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

#[profile.release]
#strip = true        # Strip symbols form the binary
#opt-level = "s"     # Optimize for size
#lto = true          # link time optimization
#codegen-units = 1   # Maximize size reduction optimizations
