[package]
name = "apps-launcher"
version = "0.1.0"
description = "__FUCK_OFF__"
authors = ["you"]
license = "AsYouWish"
repository = ""
default-run = "apps-launcher"
edition = "2021"
#rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["config-json5"] }

[dependencies]
tauri = { version = "1.2.4", features = ["config-json5", "global-shortcut-all", "shell-all", "system-tray", "window-close", "window-hide", "window-set-focus", "window-show"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
#winres = "0.1.12"
window-vibrancy = "0.3.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

#[profile.release]
#panic = "abort" # Strip expensive panic clean-up logic
#codegen-units = 1 # Compile crates one after another so the compiler can optimize better
#lto = true # Enables link to optimizations
#opt-level = "z" # Optimize for binary size
